--- a/TheForest/templates/TheForest/micuentatf.html
+++ b/TheForest/templates/TheForest/micuentatf.html
@@ -9,7 +9,7 @@
   <title>Mi cuenta-The forest Wiki</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="css/micuenta.css">
+  <link type="text/css" rel="stylesheet" href="{% static 'TheForest/css/micuenta.css' %}">
 
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap"
     rel="stylesheet">
@@ -61,7 +61,7 @@
   <div class="perfil-usuario-header">
       <div class="perfil-usuario-portada">
           <div class="perfil-usuario-avatar">
-              <img src="img_wiki/user.png" alt="img-avatar">
+              <img src="{% static 'theforest/img_wiki/user.png' %}" alt="img-avatar">
               <button type="button" class="boton-avatar">
                   <i class="far fa-image"></i>
               </button>
